force-app/main/default/objects/PMC_CPQ_BRExpirationValidityTable__mdt/PMC_CPQ_BRExpirationValidityTable__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata table will be used to store the number of days from which the Quote should expire based on Quote Classification.</description>
    <label>BR Expiration Validity Table</label>
    <pluralLabel>BR Expiration Validity Tables</pluralLabel>
</CustomObject>