force-app/main/default/objects/PMC_CPQ_BRExpirationValidityTable__mdt/fields/PMC_CPQ_BusinessType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_BusinessType__c</fullName>
    <description>The Primary Business type of the metadata record.</description>
    <label>Business Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>