force-app/main/default/objects/PMC_CPQ_BRExpirationValidityTable__mdt/fields/PMC_CPQ_Classification__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Classification__c</fullName>
    <description>The type of Quote Classification.</description>
    <label>Classification</label>
    <length>32</length>
    <type>Text</type>
</CustomField>