force-app/main/default/objects/PMC_CPQ_BRExpirationValidityTable__mdt/fields/PMC_CPQ_NumberOfDays__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_NumberOfDays__c</fullName>
    <description>The number of days from which the quote should be expired.</description>
    <label>Number Of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>